--- a/infrastructure/kube/keep-test/monitoring/prometheus-service.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus-service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-service
+  name: prometheus
   namespace: monitoring
   annotations:
     prometheus.io/scrape: 'true'
     prometheus.io/port: '9090'
 spec:
   selector:
-    app: prometheus-server
+    app: prometheus
   type: NodePort
   ports:
     - port: 9090
