Generate code before build in CI

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -158,6 +158,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version-file: "go.mod"
+      - name: Generate Code
+        run: make get_artifacts generate
       - name: Build Binaries
         run: make build-all
 
