--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -54,6 +54,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Resolve versions
+        run: |
+          echo "version=$(git describe --tags --match "v[0-9]*" HEAD)" >> $GITHUB_ENV
+          echo "revision=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
       - name: Load environment variables
         uses: keep-network/ci/actions/load-env-variables@v2
         if: github.event_name == 'workflow_dispatch'
@@ -77,8 +82,8 @@ jobs:
           target: gobuild
           tags: go-build-env
           build-args: |
-            REVISION=${{ github.sha }}
-          # VERSION= ? TODO: Configure version, sample: 1.7.6
+            VERSION=${{ env.version }}
+            REVISION=${{ env.revision }}
           load: true # load image to local registry to use it in next steps
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
@@ -93,10 +98,10 @@ jobs:
       - name: Build Docker Runtime Image
         if: github.event_name != 'workflow_dispatch'
         uses: docker/build-push-action@v2
-        env:
-          IMAGE_NAME: 'keep-client'
         with:
-          labels: revision=${{ github.sha }}
+          labels: |
+            version=${{ env.version }}
+            revision=${{ env.revision }}
           push: false
 
       - name: Login to Google Container Registry
@@ -117,9 +122,13 @@ jobs:
           # HOSTNAME/PROJECT-ID/IMAGE:TAG
           # We don't use TAG yet, will be added at later stages of work on RFC-18.
           tags: ${{ env.GCR_REGISTRY_URL }}/${{ env.GOOGLE_PROJECT_ID }}/${{ env.IMAGE_NAME }}
-          labels: revision=${{ github.sha }}
+          labels: |
+            version=${{ env.version }}
+            revision=${{ env.revision }}
           build-args: |
             ENVIRONMENT=${{ github.event.inputs.environment }}
+            VERSION=${{ env.version }}
+            REVISION=${{ env.revision }}
           push: true
 
       - name: Notify CI about completion of the workflow
