Add --goerli flag to the client start command
The `--gerli` is now required to be added to start a client on
`keep-test` network.

--- a/infrastructure/kube/keep-test/keep-client/gen/template.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/template.yaml
@@ -80,6 +80,7 @@ spec:
               mountPath: /mnt/keep-client/keyfile
           command: ["keep-client", "start"]
           args:
+            - --goerli
             - --ethereum.url
             - $(ETH_WS_URL)
             - "--ethereum.keyFile"
