Use @nomiclabs/hardhat-etherscan
@nomiclabs/hardhat-etherscan exposes verification functions for
Etherscan that are recommended by the hardhat team.

See https://hardhat.org/hardhat-runner/plugins/nomiclabs-hardhat-etherscan

Previously we were using `etherscan-verify` from `hardhat-deploy`
plugin, which had some problems with verification of e.g. `RandomBeacon`
and `WalletRegistry`.

--- a/solidity/ecdsa/package.json
+++ b/solidity/ecdsa/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
-    "@keep-network/hardhat-helpers": "^0.6.0-pre.11",
+    "@keep-network/hardhat-helpers": "^0.6.0-dev.4",
     "@keep-network/hardhat-local-networks-config": "^0.1.0-pre.4",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
