Improve wording of a PR comment with documentation preview

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -72,5 +72,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Preview uploaded to https://docs.keep.network/${{ github.head_ref }}/index.html.'
+              body: 'Documentation preview uploaded to https://docs.keep.network/${{ github.head_ref }}/index.html.'
             })
