Change version's suffix to `-dapp-dev-goerli`
We are publishing packages with code from `dapp-development` branch under
versions that use `-dapp-dev-goerli.X` suffix. Our `package.json` on this branch
should reflect that. If we do not set it up, the CI job used to pubblish the
package will not be able to correctly bump up the version of the package.

--- a/solidity/random-beacon/package.json
+++ b/solidity/random-beacon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keep-network/random-beacon",
-  "version": "2.0.0-dev",
+  "version": "2.0.0-dapp-dev-goerli",
   "description": "Keep Random Beacon",
   "files": [
     "artifacts/",
