--- a/solidity/random-beacon/package.json
+++ b/solidity/random-beacon/package.json
@@ -36,7 +36,7 @@
     "@keep-network/sortition-pools": "^2.0.0-pre.13",
     "@openzeppelin/contracts": "^4.6.0",
     "@thesis/solidity-contracts": "github:thesis/solidity-contracts#4985bcf",
-    "@threshold-network/solidity-contracts": "development"
+    "@threshold-network/solidity-contracts": "dapp-development-goerli"
   },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
