--- a/configs/config.toml.SAMPLE
+++ b/configs/config.toml.SAMPLE
@@ -66,7 +66,7 @@ Port = 3920
 # DisseminationTime = 90
 
 [storage]
-DataDir = "/my/secure/location"
+Dir = "/my/secure/location"
 
 # Metrics collects and exposes information useful for external monitoring tools usually
 # operating on time series data.
