Add Bridge address to config resolve
We need Bridge contract address to be able to run ethereum CLI commands
and interact with the Bridge contract.

--- a/configs/config.toml.SAMPLE
+++ b/configs/config.toml.SAMPLE
@@ -102,3 +102,4 @@ Port = 8081
 # TokenStakingAddress = "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
 # RandomBeaconAddress = "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
 # WalletRegistryAddress = "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
+# BridgeAddress = "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
