--- a/test/config.toml
+++ b/test/config.toml
@@ -34,3 +34,4 @@ Port = 9723
 RandomBeaconAddress = "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
 WalletRegistryAddress = "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
 TokenStakingAddress = "0xa363a197f1bbb8877f50350234e3f15fb4175457"
+BridgeAddress = "0x138D2a0c87BA9f6BE1DCc13D6224A6aCE9B6b6F0"
