--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -188,4 +188,8 @@ jobs:
         with:
           go-version-file: "go.mod"
       - name: gofmt
-        run: if [ "$(gofmt -l . | wc -l)" -gt 0 ]; then exit 1; fi
+        run: |
+          if [ $(gofmt -l . | wc -l) -gt 0 ]; then
+            gofmt -d -e .
+            exit 1
+          fi
